<androidx.cardview.widget.CardView android:layout_width="195dp"
    android:layout_height="220dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="16dp"
    app:cardElevation="0dp"
    android:layout_marginLeft="5dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:backgroundTint="#F5F3EF">
    <!-- Parent FrameLayout 'FL' -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F5F3EF"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="195dp"
            android:layout_marginBottom="15dp"
            android:orientation="vertical"
            android:background="@drawable/rectangle_white_big"

            >
            <ImageView
                android:id="@+id/pizzaImage"
                android:layout_width="wrap_content"
                android:layout_height="109dp"
                android:src="@drawable/pizza2"
                android:scaleType="fitCenter"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true">
            </ImageView>
            <TextView
                android:id="@+id/pizzaPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pizzaImage"

                android:text="@string/some_id"
                android:textAppearance="@style/some_id"
                android:lineSpacingExtra="-2sp"
                android:gravity="center_horizontal"
                />
            <TextView
                android:id="@+id/pizzaName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pizzaPrice"
                android:layout_centerHorizontal="true"
                android:text="@string/fresh_farm_"
                android:textAppearance="@style/fresh_farm_"
                android:lineSpacingExtra="-2sp"
                android:gravity="center_horizontal|center_vertical"
                android:alpha="0.8">
            </TextView>
            <TextView
                android:id="@+id/pizzaDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pizzaName"
                android:layout_centerHorizontal="true"
                android:text="@string/crisp_capsi"
                android:textAppearance="@style/crisp_capsi"
                android:gravity="center_horizontal|center_vertical"
                android:alpha="0.8">
            </TextView>
        </RelativeLayout>
    </FrameLayout>
    <!-- Button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add"
        android:layout_width="111dp"
        android:layout_height="35dp"
        android:layout_gravity="bottom|center_horizontal"
        android:background="@drawable/rectangle_orange"
        android:fontFamily="@font/signika_semibold"
        android:text="ADD"
        android:textSize="12sp"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:elevation="0dp"
        android:layout_marginBottom="8dp"
        />

</androidx.cardview.widget.CardView>
